Re-Do: Merge pull request with squash merge (#25)
Updates integration to CArtAgO v3.1. Co-authored by Matteo Castelluci and Jérémy Lemee.